--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-spring.application.name=todolist
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# spring.application.name=todolist
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/todolist
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=user
+spring.datasource.password=123456
+
+spring.jpa.hibernate.ddl-auto=update # lê as entidades, observa as anotações e cria as propriedades/campos/colunas respectivas no banco de dados
