--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+spring.application.name=todolistApplication
+
 spring.datasource.url=jdbc:mysql://localhost:3306/todolist
-spring.datasource.username=user
-spring.datasource.password=123456
+spring.datasource.username=root
+spring.datasource.password=Milionari@1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
